Changelog
=========

1.2.3 (unreleased)
------------------

- Nothing changed yet.


1.2.2 (2014-04-15)
------------------

- Append "/view" to objects url if they are in the
  'typesUseViewActionInListings' property.
  [Julian Infanger]

- Check the navigations markup in js. Only load the navigation
  children if there is the right markup.
  [Julian Infanger]


1.2.1 (2013-10-17)
------------------

- Changed breakpoint to enable mobile navigation to 769px.
  [Julian Infanger]


1.2.0 (2013-09-24)
------------------

- Fix javascript errors.
  [jone]

- Make personaltools menu use 100% width and increase font size.
  [jone]

- Navigation views: allow to pass in a query for additional filtering / sorting.
  [jone]

- Fixed css selector to avoid conflicts with ftw.dropdownmenu.
  [Julian Infanger]

- Added link_target to mobile buttons.
  [Julian Infanger]

- Added slide navigation.
  [Julian Infanger]

- Disable diazo for ajax request.
  [Julian Infanger]


1.1.2 (2013-06-26)
------------------

- Get navigation root for navigation action instead of portal_url.
  [Julian Infanger]

- Fixed condition to show dexterity objects.
  Also check index for Missing.Value.
  [Julian Infanger]


1.1.1 (2013-06-05)
------------------

- Use javascript fallback for old browsers.
  [Julian Infanger]


1.1 (2013-05-30)
----------------

- Hide iphone scrollbar on loading a new page.
  [Julian Infanger]


1.0 (2013-04-30)
----------------

- Initial release