@@ -4,7 +4,8 @@ Changelog
 1.2.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Escape HTML chars in mobile navigation.
+  [Julian Infanger]
 
 
 1.2.2 (2014-04-15)
